--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,12 +10,12 @@
   with_items: buildessential_packages
   when: ansible_os_family == "Debian"
 
-- name: build-essential | Make sure the packages are installed (Fedora)
+- name: build-essential | Make sure the packages are installed (Fedora/RedHat)
   yum:
     name: "{{item}}"
     state: present
   with_items: buildessential_packages
-  when: ansible_os_family == "Fedora"
+  when: ansible_os_family == "Fedora" or ansible_os_family == "RedHat"
 
 - name: build-essential | Make sure the packages are installed (Suse)
   zypper:
