--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,7 @@
   apt:
     pkg: "{{item}}"
     state: present
+    update_cache: yes
   with_items: buildessential_packages
   when: ansible_os_family == "Debian"
 
