--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,27 +1,34 @@
 # file: build-essential/meta/main.yml
 
 galaxy_info:
-  author: pjan vandaele
-  company: Ansibles
+  author: "Kuniaki Shimizu"
   description: Install packages required for compiling C software from source.
   min_ansible_version: 1.4
   license: MIT
   platforms:
   - name: Ubuntu
     versions:
-    - all
+    - lucid
+    - precise
+    - trusty
   - name: Debian
     version:
-    - all
+    - wheezy
   - name: Fedora
     versions:
-    - all
-  - name: RedHat
+    - 19
+    - 20
+  - name: EL
     versions:
-    - all
+    - 5
+    - 6
+    - 7
   - name: Suse
     versions:
-    - all
+    - 13.1
+  - name: FreeBSD
+    versions:
+    - 10.0
   categories:
   - system
   - development
