--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,7 @@
   include_vars: "{{ansible_distribution}}.yml"
 
 - name: Make sure the packages are installed (Debian/Ubuntu)
+  sudo: yes
   apt:
     pkg: "{{item}}"
     state: present
@@ -12,6 +13,7 @@
   when: ansible_distribution in [ "Debian", "Ubuntu" ]
 
 - name: Make sure the packages are installed (Fedora/RedHat/CentOS)
+  sudo: yes
   yum:
     name: "{{item}}"
     state: present
@@ -19,6 +21,7 @@
   when: ansible_distribution in [ "Fedora", "RedHat", "CentOS" ]
 
 - name: Make sure the optional packages are installed (RedHat/CentOS, <6.0)
+  sudo: yes
   yum:
     name: "{{item}}"
     state: present
@@ -26,6 +29,7 @@
   when: ansible_distribution in [ "RedHat", "CentOS" ] and {{ ansible_distribution_version | version_compare('6.0', '<') }}
 
 - name: Make sure the packages are installed (Suse)
+  sudo: yes
   zypper:
     name: "{{item}}"
     state: present
@@ -33,6 +37,7 @@
   when: ansible_distribution == "Suse"
 
 - name: Make sure the packages are installed (FreeBSD)
+  sudo: yes
   pkgng:
     name: "{{item}}"
     state: present
